name:
  LATS
version:
  0.5.0
synopsis:
  Linear Algebra on Typed Spaces
description:
  Please see README.md
homepage:
  http://github.com/guaraqe/LATS#readme
license:
  BSD3
license-file:
  LICENSE
author:
  guaraqe
maintainer:
  guaraqe@openmailbox.org
copyright:
  Copyright 2016 guaraqe
category:
  Numeric
build-type:
  Simple
cabal-version:
  >=1.10

library
  hs-source-dirs:
    src

  exposed-modules:
    LATS.Matrix.Raw
    LATS.Vector.Raw

    LATS.Vector.Mutable

    LATS.Matrix
    LATS.Vector
    LATS

  build-depends:
    base >= 4.7 && < 5 ,
    constraint-classes >= 0.6 && < 0.7,
    hmatrix >= 0.17 && < 0.19,
    semigroups >= 0.18 && < 0.19,
    vector >= 0.11 && < 0.13,
    newtype,
    phantom-index

  ghc-options:
    -Wall
    -O2
    -fno-warn-orphans

  extra-libraries:
    openblas

  default-extensions:
    TypeOperators

  default-language:
    Haskell2010
